--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ PyQt5==5.15.9
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.11.1
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 python-Levenshtein==0.21.1
 pytz==2023.3.post1
 pytz-deprecation-shim==0.1.0.post0
