--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ aiosasl==0.5.0
 aioxmpp==0.13.3
 alembic==1.12.1
 arrow==1.2.3
+asttokens==2.4.1
 async-timeout==3.0.1
 attrs==23.1.0
 Babel==2.12.1
@@ -15,11 +16,17 @@ chardet==4.0.0
 charset-normalizer==3.3.0
 click==8.1.7
 colorama==0.4.6
+comm==0.2.0
 contourpy==1.0.7
 cryptography==40.0.2
 cycler==0.11.0
+debugpy==1.8.0
+decorator==5.1.1
 dnspython==2.3.0
+executing==2.0.1
 Flask==3.0.0
+Flask-CKEditor==0.5.1
+Flask-Login==0.6.3
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
 fonttools==4.39.0
@@ -29,33 +36,54 @@ graphics.py==5.0.1.post1
 greenlet==3.0.1
 gunicorn==21.2.0
 idna==3.4
+ipykernel==6.27.1
+ipython==8.18.1
 itsdangerous==2.1.2
+jedi==0.19.1
 Jinja2==3.1.2
 jinja2-time==0.2.0
+jupyter_client==8.6.0
+jupyter_core==5.5.0
 kiwisolver==1.4.4
 Levenshtein==0.21.1
 lxml==4.9.2
 Mako==1.2.4
 MarkupSafe==2.1.2
 matplotlib==3.7.1
+matplotlib-inline==0.1.6
 multidict==4.5.2
+nest-asyncio==1.5.8
 numpy==1.24.2
+opencv-python==4.8.1.78
 packaging==23.0
+parso==0.8.3
 Pillow==9.4.0
+platformdirs==4.1.0
+prompt-toolkit==3.0.41
+psutil==5.9.6
+psycopg2==2.9.9
+pure-eval==0.2.2
 pyasn1==0.4.7
 pyasn1-modules==0.2.7
 pycparser==2.21
 pydicom==2.3.1
+Pygments==2.17.2
+PyOpenGL==3.1.7
 pyOpenSSL==23.1.1
 pyparsing==3.0.9
 PyQt5==5.15.9
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.11.1
+PyQt6==6.6.1
+PyQt6-Qt6==6.6.1
+PyQt6-sip==13.6.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-Levenshtein==0.21.1
 pytz==2023.3.post1
 pytz-deprecation-shim==0.1.0.post0
+pywin32==306
+pyzmq==25.1.2
 rapidfuzz==3.4.0
 requests==2.31.0
 singletonify==0.2.3
@@ -64,11 +92,15 @@ sortedcollections==2.1.0
 sortedcontainers==2.4.0
 spade==3.2.3
 SQLAlchemy==2.0.23
+stack-data==0.6.3
 timeago==1.0.8
+tornado==6.4
+traitlets==5.14.0
 types-pytz==2023.3.1.1
 typing_extensions==4.5.0
 tzdata==2023.3
 tzlocal==4.3
 urllib3==2.0.6
+wcwidth==0.2.12
 Werkzeug==3.0.0
 yarl==1.9.2
